--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "assignment-1---expressjs-website",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./server.js"
@@ -21,5 +21,14 @@
   "description": "Assignment 1",
   "main": "app.js",
   "author": "James Yan",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BlackFantasies/COMP229-A1-EXPJS_WEB.git"
+  },
+  "bugs": {
+    "url": "https://github.com/BlackFantasies/COMP229-A1-EXPJS_WEB/issues"
+  },
+  "homepage": "https://github.com/BlackFantasies/COMP229-A1-EXPJS_WEB#readme"
 }
